--- a/apps/admins/view/Pass/pass_result.html
+++ b/apps/admins/view/Pass/pass_result.html
@@ -41,7 +41,7 @@
 </div>
 </body>
 </html>
-<script src="__static__/js/jquery.min.js"></script>
+<script src="__static__/js/jquery.js"></script>
 <script>
 
     $('.msg_sub').click(function(){
