--- a/public/admin/admins/css/pass.css
+++ b/public/admin/admins/css/pass.css
@@ -50,13 +50,13 @@ body{
     width:98%;
     margin:0px auto;
     text-align: center;
-    border-top:1px solid black;
-    border-left:1px solid black;
+    border-top:1px solid #ddd;
+    border-left:1px solid #ddd;
 }
 .result_msg td{
 
-    border-right:1px solid black;
-    border-bottom:1px solid black;
+    border-right:1px solid #ddd;
+    border-bottom:1px solid #ddd;
 }
 .pagination li{
     width:50px;
@@ -84,4 +84,58 @@ body{
     width:1100px;
     height:40px;
     float:left;
+}
+#date_start{
+    width:200px;
+}
+.show_d{
+    width:80px;
+    height:40px;
+    background-color:dodgerblue;
+    color:white;
+    font-size:16px;
+    border:none;
+}
+.haxi_data{
+    display: none;
+    width:50%;
+    height:50%;
+    position: absolute;
+    left:25%;
+    top:25%;
+    opacity: 0.8;
+    color:white;
+    font-size:18px;
+}
+.data_show{
+    width:100%;
+    height:100%;
+    overflow: scroll;
+    background-color: #17729F;
+}
+.data_show ul{
+    list-style: none;
+    text-align: center;
+    line-height: 20px;
+}
+.d_title{
+    width:100%;
+    height:8%;
+    background: -moz-linear-gradient(top, white 30%, #17729F 70%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(30%,white), color-stop(70%,#17729F));
+    background: -webkit-linear-gradient(top,white 30%,#17729F 70%);
+    background: -o-linear-gradient(top, white 30%,#17729F 70%);
+    background: -ms-linear-gradient(top, white 30%,#17729F 70%);
+    background: linear-gradient(to bottom, white 30%,#17729F 70%);
+}
+.d_title img{
+    float:right;
+    width:20px;
+    cursor: pointer;
+}
+.pro_search_div input[type='text']{
+    height:30px;
+    border:1px solid darkgrey;
+    background-color: ghostwhite;
+    border-radius: 10px;
 }
