--- a/apps/admins/view/Medical/medical_add.html
+++ b/apps/admins/view/Medical/medical_add.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="field">
                     <span id="Eerror"></span>
-                    <input type="button" onclick="Submit()" value="提交" class="button bg-main icon-check-square-o">
+                    <input type="button" onclick="Submit()" value="" class="button bg-main icon-check-square-o">
                 </div>
             </div>
         </form>
