--- a/apps/admins/view/Chain/Chain.html
+++ b/apps/admins/view/Chain/Chain.html
@@ -6,26 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="renderer" content="webkit">
     <title>病案修改清单</title>
-    <link rel="stylesheet" href="admin/admins/css/pintuer.css">
-    <link rel="stylesheet" href="admin/admins/css/admin.css">
-    <script src="admin/admins/js/jquery.js"></script>
-    <script src="admin/admins/js/pintuer.js"></script>
+    <link rel="stylesheet" href="/admin/admins/css/pintuer.css">
+    <link rel="stylesheet" href="/admin/admins/css/admin.css">
+    <script src="/admin/admins/js/jquery.js"></script>
+    <script src="/admin/admins/js/pintuer.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="admin/admins/css/normalize.css" />-->
+    <!--<link rel="stylesheet" type="text/css" href="admin/admins/css/default.css">-->
+    <!--<link rel='stylesheet prefetch' href='admin/admins/css/font-awesome.min.css'>-->
+    <!--<link rel="stylesheet" type="text/css" href="admin/admins/css/styles.css">-->
+    <!--<script src="http://libs.useso.com/js/html5shiv/3.7/html5shiv.min.js"></script>-->
 </head>
 <body>
 <div class="panel admin-panel"><!--<a href="" style="float:right; display:none;">添加字段</a>-->
-    <div class="panel-head"><strong class="icon-reorder"> 病案入链状态</strong><input type="radio" name="already_chain" id="already_chain" value="0">已入链 &nbsp;&nbsp;<input type="radio" name="already_chain" id="no_chain" value="1">未入链&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="panel-head"><strong class="icon-reorder"> 病案入链状态</strong>
+        <input type="radio" class="active_radio" name="already_chain" id="chain_status=2" value="2" runat="server" checked>全部&nbsp;&nbsp;
+        <input type="radio" class="active_radio" name="already_chain" id="chain_status=0" value="0">已入链 &nbsp;&nbsp;
+        <input type="radio" class="active_radio" name="already_chain" id="chain_status=1" value="1">未入链&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         病案归档时间<select name="">
-            <option value="0">今天</option>
-            <option value="1">最近一周</option>
-            <option value="2">近一个月</option>
-            <option value="3">近三个月</option>
-        </select>  </div>
+            <option value="4" class="chain_option" id="chain_time=4" check="selected">全部时间</option>
+            <option value="0" class="chain_option" id="chain_time=0">今天</option>
+            <option value="1" class="chain_option" id="chain_time=1">最近一周</option>
+            <option value="2" class="chain_option" id="chain_time=2">近一个月</option>
+            <option value="3" class="chain_option" id="chain_time=3">近三个月</option>
+        </select></div>
     <div class="padding border-bottom">
-        <a href="medical_add"><button type="button" class="button border-yellow" id="button"><span class="icon-plus-square-o"></span> 病案新增</button></a>
+        <a href="medical_add"><button type="button" class="button border-yellow" id="button"><span class="icon-plus-square-o"></span>病案新增</button></a>
     </div>
 </div>
-<table class="table table-hover text-center">
+<table class="table table-hover text-center" border="1">
     <tr>
+        <!--<th><input type="button" id="chain_block"></th>-->
+       <th><button class="checkall">全选</button></th>
         <th width="100" style="text-align:left; padding-left:20px;">姓名</th>
         <th>年龄</th>
         <th>性别</th>
@@ -36,36 +47,224 @@
         <th>归档时间</th>
         <th>入链操作</th>
     </tr>
-</table>
-</div>
-<script type="text/javascript">
-    $(".up").click(function(){
-        var id=$(this).attr('article');
-        var status=$(this).attr('status');
-        var obj=$(this);
-        $.ajax({
-            url:'status_up?id='+id+'&status='+status,
-            type:'get',
-            dataType:'json',
-            success:function(msg){
-                if(msg==1) {
-                    obj.html("<b style='color:green;'>✔</b>");
-                    obj.attr('status','1');
-                }
-                if(msg==0) {
-                    obj.html("<b style='color:red;'>✘</b>");
-                    obj.attr('status','0');
-                }
-            }
-        })
-    })
+<tbody id="show"></tbody>
 
-    //单个删除
-    function del(id,mid,iscid){
-        if(confirm("您确定要删除吗?")){
+</table>
+{if condition="$auto_load.auto_chain eq 0"}
+<div class="field" style="margin-left: 1530px;margin-top: -5px;">
+
+    <span id="Eerror"></span>
+    <!--<input type="checkbox" value="批量删除" onclick="check_del();">-->
+    <input type="button" onclick="check_chain();" value="关闭自动入链" class="button bg-main icon-check-square-o">
+</div>
+{else/}
+<div class="field" style="margin-left: 1530px;margin-top: -5px;">
+
+    <span id="Eerror1"></span>
+    <!--<input type="checkbox" value="批量删除" onclick="check_del();">-->
+    <input type="button" onclick="check_chain();" value="开启自动入链" class="button bg-main icon-check-square-o">
+</div>
+
+{/if}
+<div id="page"></div>
+<script type="text/javascript">
+    /**自动入链**/
+    function check_chain(){
+        var url = 'chain_checkchain';
+        var obj = $(this);
+        $.post(url,{},function(msg){
+            if(msg.msg==0){
+
+                window.location.reload();
+            }else if(msg.msg==1){
+
+                window.location.reload();
+            }
+        });}
+    //全选
+  $(".checkall").click(function(){
+      $("input[name='check[]']").each(function(){
+//          alert(this.val());
+          if(this.checked){
+              this.checked=false;
+          }else{
+              this.checked=true;
+          }
+      })
+  });
+  /**获取radio里的值做多条件查询**/
+  $("document").ready(function(){
+      var active = $(".active_radio");
+      var str='';
+      for(var i=0;i<active.length;i++){
+          if(active.eq(i).prop('checked')){
+              str+=active.eq(i).attr('id')+'&';
+          }
+
+      }
+      var res = $(".chain_option");
+      for(var i=0;i<res.length;i++){
+//         alert(res.eq(i).prop('selected'))
+          if(res.eq(i).prop('selected')){
+              str+=res.eq(i).prop('id');
+          }
+
+      }
+    page(1,str)
+//      alert(str)
+  });
+  $(".panel-head input:radio").click(function(){
+        var _this = $(this);
+//        if(_this.eq(i).checked)
+      var str = _this.attr('id')+'&';
+      var res = $(".chain_option");
+//      for(var i=0;i<res.length;i++){
+////         alert(res.eq(i).prop('selected'))
+//          if(res.eq(i).prop('selected')){
+//              str+=res.eq(i).prop('id');
+//          }
+//
+//      }
+      str+=fire(res);
+//      alert(str)
+      page(1,str);
+//        alert(_this.prop('checked'));
+  });
+    $(".panel-head option").click(function(){
+        var active = $(".active_radio");
+        var str = six(active);
+         var _this = $(this);
+//        if(_this.eq(i).checked)
+         str += _this.attr('id');
+//         alert(str)
+        page(1,str);
+    });
+    function page(page,str){
+//        alert(str)
+        date = '';
+        if(str==''){
+            date = 'page='+page;
+        }else{
+            date = 'page='+page+'&'+str;
+          }
+//        alert(date)
+        $.ajaxSetup({
+            async : false
+        });
+        var url='chain_search';
+
+        $.post(url,date,function(msg){
+//alert(msg.status)
+
+            if(msg.status==1){
+                var st = '';
+                $.each(msg.data,function(k,v){
+
+                    st+='<tr><th><input type="checkbox" name="check[]" value="'+v.chain_id+'" id="chain_id"></th>';
+                    st+='<td>'+v.chain_user+'</td>';
+                    st+='<td>'+v.chain_age+'</td>';
+                    if(v.chain_sex==1){
+                        st+='<td>男</td>';
+                    }else{
+                        st+='<td>女</td>';
+                    }
+                    st+='<td>'+v.chain_num+'</td>';
+                    st+='<td>'+v.chain_department+'</td>';
+                    st+='<td>'+v.chain_lesion+'</td>';
+                    if(v.chain_file==0){
+                        st+='<td>已归档</td>';
+                    }else if(v.chain_file==1){
+                        st+='<td>未归档</td>';
+                    }
+                    if(v.chain_file==0){
+                        st+='<td>'+v.chain_time+'</td>';
+                    }else{
+                        st+='<td>未归档时间</td>';
+                    }
+                    if(v.chain_status==1){
+                        st+='<td class="block"><input type="button" id="block_chain" date_id = "'+v.chain_id+'" name="block_chain" value="入链✘" style="color: red"></td>';
+                    }else if(v.chain_status==0){
+                        st+='<td style="color: green">已入链✔</td>';
+                    }
+//
+                    st+='</tr>';
+
+                });
+//                alert(msg.page)
+                $("#show").html(st);
+                $("#page").html(msg.page);
+            }else if(msg.status==0){
+                var st="<font style='color: #00a4ac' size='6' face='微软雅黑'>暂时没有数据:)</font>";
+                $("#show").html(st);
+                $("#page").html('');
+            }
+        });
+}
+    /**委托事件**/
+    $(document).on('click','#block_chain',function(){
+        var chain_id = $(this).attr('date_id');
+        var url = 'chain_block';
+        var obj = $(this);
+//        obj.parent().html("<d style='color:green;'>已入链✔</d>");
+        $.post(url,{chain_id:chain_id},function(msg){
+//            alert(msg.status)
+            if(msg.status==0){
+                obj.parent().html("<d style='color:green;'>已入链✔</d>");
+            }else if(msg.status==1){
+                alert('网络异常，请检查网络后再试一次：）');
+            }else if(msg.status==2){
+                alert('入链状态异常,请重新点击');
+            }
+        });
+    });
+
+//    $("#block_chain").click(function(){
+//       alert(2)
+//    });
+
+
+
+    function six(obj){
+        var str = '';
+        for(var i=0;i<obj.length;i++){
+//            alert(active.eq(i).attr('id'))
+            if(obj.eq(i).prop('checked')){
+                str+=obj.eq(i).attr('id')+'&';
+            }
 
         }
+        return str;
     }
+    function fire(obj) {
+        var str = '';
+        for (var i = 0; i < obj.length; i++) {
+            if (obj.eq(i).prop('selected')) {
+                str += obj.eq(i).attr('id');
+            }
+        }
+        return str;
+    }
+/**即点即改**/
+//    $(".up").click(function(){
+//        var id=$(this).attr('article');
+//        var status=$(this).attr('status');
+//        var obj=$(this);
+//        $.ajax({
+//            url:'status_up?id='+id+'&status='+status,
+//            type:'get',
+//            dataType:'json',
+//            success:function(msg){
+//                if(msg==1) {
+//                    obj.html("<b style='color:green;'>✔</b>");
+//                    obj.attr('status','1');
+//                }
+//                if(msg==0) {
+//                    obj.html("<b style='color:red;'>✘</b>");
+//                    obj.attr('status','0');
+//                }
+//            }
+//        })
+//    });
 
     //全选
     $("#checkall").click(function(){
@@ -77,7 +276,7 @@
                 this.checked = true;
             }
         });
-    })
+    });
 
     //批量删除
     function DelSelect(){
