--- a/apps/admins/view/Mail/mail.html
+++ b/apps/admins/view/Mail/mail.html
@@ -35,15 +35,22 @@
        <div class="h2_2_top"><img src="__static__/images/point.png" /><div class="h2_2_title">管理员控制</div></div>
        <ul>
            <li><a href="admin_list" target="right"><span class="icon-caret-right"></span>管理员管理</a></li>
-           <li><a href="admin_add" target="right"><span class="icon-caret-right"></span>管理员添加</a></li>
+           <li><a href="admin_lisd" target="right"><span class="icon-caret-right"></span>管理员添加</a></li>
        </ul>
    </div>
 
+    <div class="h2_2">
+        <div class="h2_2_top"><img src="__static__/images/point.png" /><div class="h2_2_title">角色控制</div></div>
+        <ul>
+            <li><a href="role_add" target="right"><span class="icon-caret-right"></span>角色添加</a></li>
+            <li><a href="role_list" target="right"><span class="icon-caret-right"></span>角色管理</a></li>
+        </ul>
+    </div>
 
         <div class="h2_2">
             <div class="h2_2_top"><img src="__static__/images/point.png" /><div class="h2_2_title">权限控制</div></div>
             <ul>
-                <li><a href="role_list" target="right"><span class="icon-caret-right"></span>角色管理</a></li>
+                <li><a href="node_index" target="right"><span class="icon-caret-right"></span>权限添加</a></li>
                 <li><a href="node_list" target="right"><span class="icon-caret-right"></span>权限管理</a></li>
             </ul>
         </div>
@@ -52,9 +59,9 @@
             <div class="h2_2_top"><img src="__static__/images/point.png" /><div class="h2_2_title">病案管理</div></div>
 
             <ul>
-                <li><a href="medical_add" target="right"><span class="icon-caret-right"></span>添加病案</a></li>
-                <li><a href="medical_delete" target="right"><span class="icon-caret-right"></span>病案删除</a></li>
-                <li><a href="medical_up" target="right"><span class="icon-caret-right"></span>病案修改</a></li>
+                <li><a href="medical_add" target="right"><span class="icon-caret-right"></span>添加病案</a></  li>
+            <li><a href="medical_delete" target="right"><span class="icon-caret-right"></span>病案删除</a></li>
+            <li><a href="medical_up" target="right"><span class="icon-caret-right"></span>病案修改</a></li>
             </ul>
         </div>
 
@@ -62,10 +69,8 @@
 
             <div class="h2_2_top"><img src="__static__/images/point.png" /><div class="h2_2_title">监控查询</div></div>
             <ul>
-                <li><a href="pass_index.html" target="right"><span class="icon-caret-right"></span>病案修改情况查询</a></li>
-                <li><a href="pass_pro.html" target="right"><span class="icon-caret-right"></span>病案高级查询</a></li>
-                <li><a href="adv.html" target="right"><span class="icon-caret-right"></span>风险</a></li>
-                <li><a href="adv.html" target="right"><span class="icon-caret-right"></span>列表</a></li>
+                <li><a href="pass_index" target="right"><span class="icon-caret-right"></span>病案修改情况查询</a></li>
+                <li><a href="pass_pro" target="right"><span class="icon-caret-right"></span>病案高级查询</a></li>
             </ul>
         </div>
 
@@ -73,10 +78,9 @@
         <div class="h2_2">
             <div class="h2_2_top"><img src="__static__/images/point.png" /><div class="h2_2_title">病案入链</div></div>
             <ul>
-                <li><a href="chain_list" target="right"><span class="icon-caret-right"></span>病案修改清单</a></li>
-                <li><a href="adv.html" target="right"><span class="icon-caret-right"></span>选择入链</a></li>
-                <li><a href="adv.html" target="right"><span class="icon-caret-right"></span>入链记录</a></li>
-                <li><a href="adv.html" target="right"><span class="icon-caret-right"></span>自动入链</a></li>
+                <li><a href="chain_list" target="right"><span class="icon-caret-right"></span>病案入链</a></li>
+                <li><a href="chain_file" target="right"><span class="icon-caret-right"></span>病案归档</a></li>
+                <li><a href="chain_uplist" target="right"><span class="icon-caret-right"></span>入链修改</a></li>
             </ul>
         </div>
 
@@ -85,8 +89,6 @@
             <div class="h2_2_top"><img src="__static__/images/point.png" /><div class="h2_2_title">消息通知</div></div>
             <ul>
                 <li><a href="invest_list" target="right"><span class="icon-caret-right"></span>通知列表</a></li>
-                <li><a href="invest_record" target="right"><span class="icon-caret-right"></span>记录</a></li>
-                <li><a href="invest_plan" target="right"><span class="icon-caret-right"></span>进度统计</a></li>
             </ul>
         </div>
 
@@ -94,9 +96,9 @@
       <div class="h2_2">
           <div class="h2_2_top"><img src="__static__/images/point.png" /><div class="h2_2_title">系统设置</div></div>
           <ul>
-          <li><a href="adv" target="right"><span class="icon-caret-right"></span>系统首页</a></li>
-          <li><a href="notice_list" target="right"><span class="icon-caret-right"></span>系统管理</a></li>
-          <li><a href="notice_add" target="right"><span class="icon-caret-right"></span>清楚缓存</a></li>
+              <li><a href="adv" target="right"><span class="icon-caret-right"></span>系统首页</a></li>
+              <li><a href="notice_list" target="right"><span class="icon-caret-right"></span>系统管理</a></li>
+              <li><a href="notice_add" target="right"><span class="icon-caret-right"></span>清楚缓存</a></li>
           </ul>
       </div>
 
