--- a/apps/admins/view/Pass/pass_result.html
+++ b/apps/admins/view/Pass/pass_result.html
@@ -9,10 +9,10 @@
     <input type='hidden' value="{$param_1}" name="param_1" />
     <div class='msg_search'>
         <input type='text'  class='msg_text' />
-        <input type='button'  class='msg_sub' value='查询'/>
+        <input type='button'  class='msg_sub' />
     </div>
-    <table class='result_msg'>
-        <tr>
+    <table class='result_msg' cellspacing="0">
+        <tr style="background: #F0F0F0;">
             <td>全选</td>
             <td>病案标题</td>
             <td>姓名</td>
@@ -25,7 +25,7 @@
         </tr>
         {foreach name='lists' id='lists'}
         <tr>
-            <td><input type='checkbox' value='{$lists.chain_id}' /></td>
+            <td><div class="check"><input type="checkbox" name="check[]" class="get_pass" value='{$lists.chain_id}'/></div></td>
             <td>{$lists.chain_title}</td>
             <td>{$lists.chain_user}</td>
             <td>{$lists.chain_age}</td>
@@ -43,7 +43,18 @@
 </html>
 <script src="__static__/js/jquery.js"></script>
 <script>
-
+    $(document).ready(function(){
+        var flag = 1;
+        $(".check").click(function(){
+            if(flag == 1){
+                $(this).addClass('ck');
+                flag = 0;
+            } else{
+                $(this).removeClass('ck');
+                flag = 1;
+            }
+        })
+    });
     $('.msg_sub').click(function(){
         window.location.href="{:url('pass_result')}?doc="+$('.msg_text').val();
     })
