--- a/public/admin/admins/css/pass.css
+++ b/public/admin/admins/css/pass.css
@@ -52,10 +52,11 @@ body{
     text-align: center;
     border-top:1px solid #ddd;
     border-left:1px solid #ddd;
+    border-right: 1px solid #ddd;
 }
 .result_msg td{
-
-    border-right:1px solid #ddd;
+    height: 5em;
+    line-height: 5em;
     border-bottom:1px solid #ddd;
 }
 .pagination li{
@@ -69,12 +70,14 @@ body{
     width:1100px;
     height:150px;
     /*background-color: red;*/
-    margin:0 left;
+    margin-left: 6%;
+    margin-top: 5%;
 }
 .pro_search_list{
     width:250px;
     height:40px;
     float:left;
+    margin-bottom: 2%;
 }
 .pro_search_list input[type='text'],.pro_search_list_pro input[type='text']{
     width:120px;
@@ -91,10 +94,12 @@ body{
 .show_d{
     width:80px;
     height:40px;
-    background-color:dodgerblue;
     color:white;
     font-size:16px;
     border:none;
+    background: url('../images/read_msg.png') no-repeat;
+    background-size: contain;
+    vertical-align: middle;
 }
 .haxi_data{
     display: none;
@@ -135,7 +140,72 @@ body{
 }
 .pro_search_div input[type='text']{
     height:30px;
-    border:1px solid darkgrey;
-    background-color: ghostwhite;
-    border-radius: 10px;
+    background: #FCFCFC;
+    border: 1px solid #E2E2E2;
+    border-radius: 5px;
+    margin-left:2%;
+}
+.pro_search_button{
+    border:none;
+    width: 8%;
+    height: 87%;
+    background: url('../images/search_button.png') no-repeat;
+    background-size: contain;
+    vertical-align: middle;
+    margin-left:2%;
+}
+.msg_sub{
+    border:none;
+    width: 6%;
+    height: 4%;
+    background: url('../images/search_button.png') no-repeat;
+    background-size: contain;
+    vertical-align: middle;
+    margin-left:1%;
+}
+.pro_search_clear{
+    border:none;
+    width: 8%;
+    height: 87%;
+    margin-left:2%;
+    background: url('../images/clear.png') no-repeat;
+    background-size: contain;
+    vertical-align: middle;
+}
+.msg_text{
+    width:10%;
+    height:2em;
+    background: #FCFCFC;
+    border: 1px solid #E2E2E2;
+    border-radius: 5px;
+}
+.check{
+    width:21px;
+    height:21px;
+    background: url('../images/check_no.png') no-repeat;
+    float:left;
+    margin-left:35%;
+}
+.ck{
+    background: url('../images/Group_3.png') no-repeat;
+}
+.get_pass{
+    width:21px;
+    height:21px;
+    border:none;
+    opacity: 0;
+
+}
+.msg_search{
+    margin-left:1%;
+    margin-top:5%;
+    margin-bottom:5%;
+}
+.am-pagination{
+    margin-left: -1%;
+}
+.am-pagination li{
+    list-style: none;
+    margin-left:1%;
+    float:left;
 }
