--- a/public/admin/assets/css/admin.css
+++ b/public/admin/assets/css/admin.css
@@ -2,6 +2,14 @@ body,html{
     margin:0px;
     padding:0px;
 }
+@font-face {
+    font-family: PingFangSC-Light;
+    src: url('font/PingFang Light.ttf');
+}
+@font-face {
+    font-family:  PingFangSC-Regular;
+    src: url('font/PingFang-SC-Regular.otf');
+}
 .bg-main{
     width:100%;
     height:100px;
@@ -88,7 +96,7 @@ body,html{
     width:77.1%;
     height:auto;
     font-family: PingFangSC-Light;
-    font-size: 16px;
+    font-size: 90%;
     color: #000000;
     letter-spacing: 0;
     margin-left:22.9%;
@@ -125,6 +133,9 @@ body,html{
     text-align: center;
     line-height:30px;
 }
+.h2_2 ul li a{
+    margin:0 auto;
+}
 .h2_2_top_left{
     width:100%;
     height:68px;
@@ -137,6 +148,8 @@ body,html{
     width:80%;
     float:left;
     text-align: center;
+    font-size:129%;
+    font-family: PingFangSC-Regular;
 }
 .admin{
     background: #EBF2F9;
