--- a/public/admin/logins/css/index.css
+++ b/public/admin/logins/css/index.css
@@ -7,11 +7,12 @@ body,html{
     padding:0px;
 }
 p{
-    display: block;
     -webkit-margin-before: 0em;
     -webkit-margin-after: 0em;
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
+    margin-top: 0em;
+    margin-bottom: 0em;
 }
 .login_left{
     width:50%;
