--- a/apps/admins/view/Admin/admin_update.html
+++ b/apps/admins/view/Admin/admin_update.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="admin/admins/css/admin.css">
     <script src="admin/admins/js/jquery.js"></script>
     <script src="admin/admins/js/pintuer.js"></script>
+    <style>
+        .short_button {
+            width: 6.1%;
+            height: 3em;
+            border:none;
+            background:url('__static__/images/submit.png') no-repeat;
+        }
+    </style>
 </head>
 <body>
 <div class="panel admin-panel">
@@ -54,7 +62,7 @@
                     <label></label>
                 </div>
                 <div class="field">
-                    <button class="button bg-main icon-check-square-o" id="submit"> 提交</button><div class="divError"></div>
+                    <button class="short_button" id="submit"></button><div class="divError"></div>
                 </div>
             </div>
         </div>
